# rigid2d

./: .gitignore  CMakeLists.txt  vcpkg.json
include/rigid2d/: body.h  bodysystem.h  bvh.h  common.h  contact.h  forces.h  geometry.h  scene.h  shader.h  simulator.h
src/: body.cpp  bodysystem.cpp  bvh.cpp  contact.cpp  forces.cpp  geometry.cpp  main.cpp  scene.cpp  shader.cpp  simulator.cpp
